@@ -9729,36 +9729,6 @@ MEditNewPlugin1
 upd:"The name of the file to edit cannot be empty"
 upd:"The name of the file to edit cannot be empty"
 
-MEditorLoadCPWarn1
-"Файл содержит символы, которые невозможно"
-"The file contains characters that cannot be"
-"Soubor obsahuje znaky, které se nedají"
-"Datei enthält Symbole, die korrekt"
-upd:"The file contains characters that cannot be"
-"Plik zawiera znaki, które nie mogą być"
-"El archivo contiene caracteres que no pueden ser"
-"Súbor obsahuje znaky, ktoré sa nedajú"
-"Questo File Contiene Caratteri, Che Non Possono Esser"
-"Файл містить символи, які неможливо"
-"Файл змяшчае сімвалы, якія немагчыма"
-upd:"The file contains characters that cannot be"
-upd:"The file contains characters that cannot be"
-
-MEditorLoadCPWarn2
-"корректно прочитать, используя выбранную кодовую страницу."
-"correctly read using the selected code page."
-"správně přečíst se zvolenou kódovou stránkou."
-"mit ausgewälte Codepage nicht gelesen werden können."
-upd:"correctly read using the selected code page."
-"poprawnie odczytane w tej stronie kodowej."
-"correctamente leídos con la página de códigos (codepage) seleccionada."
-"správne prečítať so zvolenou tabuľkou znakov."
-"Letti Correttamente Utilizzando La Tabella Selezionata"
-"коректно прочитати з використанням обраної кодової сторінки."
-"правільна прачытаць, калі ужыць абраную кадыроўку."
-upd:"correctly read using the selected code page."
-upd:"correctly read using the selected code page."
-
 MEditorReloadCPWarnLost1
 "Для смены кодовой страницы требуется перезагрузка файла."
 "The file has to be reloaded to change the code page."
@@ -32204,17 +32174,32 @@ upd:"String {0} not found"
 MCharacterIsNotSupportedByTheCodepage
 "Символ "{0}" ({1}) не поддерживается выбранной кодовой страницей"
 "The character "{0}" ({1}) is not supported by the selected code page"
-"Znak "{0}" ({1}) není podporován vybranou kódovou stránkou"
+"Znak "{0}" ({1}) není vybranou kódovou stránkou podporován"
 "Das Zeichen "{0}" ({1}) wird von der ausgewählten Codepage nicht unterstützt"
-"Az araktert "{0}" ({1}) a kiválasztott kódlap nem támogatja"
+"Az "{0}" ({1}) karaktert a kiválasztott kódlap nem támogatja"
 "Znak "{0}" ({1}) nie jest obsługiwany przez wybraną stronę kodową"
 "El carácter "{0}" ({1}) no es compatible con la página de códigos seleccionada"
-"Znak "{0}" ({1}) nie je podporovaný vybratou kódovou stránkou"
-"Il carattere "{0}" ({1}) non è supportato dalla tabella codici selezionata"
+"Znak "{0}" ({1}) nie je podporovaný vybranou kódovou stránkou"
+"Il carattere "{0}" ({1}) non è supportato dalla code page selezionata"
 "Символ "{0}" ({1}) не підтримується вибраною кодовою сторінкою"
 "Сімвал "{0}" ({1}) не падтрымліваецца выбранай кодавай старонкай"
-upd:"The character "{0}" ({1}) is not supported by the selected code page"
-upd:"The character "{0}" ({1}) is not supported by the selected code page"
+"Pasirinktas kodo puslapis nepalaiko simbolio "{0}" ({1})"
+"O caractere "{0}" ({1}) não é suportado pela página de código selecionada"
+
+MByteSequenceIsNotSupportedByTheCodepage
+"Последовательность байтов [{0}] не поддерживается выбранной кодовой страницей"
+"The byte sequence [{0}] is not supported by the selected code page"
+"Vybraná kódová stránka nepodporuje bajtovou sekvenci [{0}]"
+"Die Bytefolge [{0}] wird von der ausgewählten Codepage nicht unterstützt"
+"A kiválasztott kódlap nem támogatja az [{0}] bájtsorozatot"
+"Sekwencja bajtów [{0}] nie jest obsługiwana przez wybraną stronę kodową"
+"La secuencia de bytes [{0}] no es compatible con la página de códigos seleccionada"
+"Vybraná kódová stránka nepodporuje bajtovú sekvenciu [{0}]"
+"La sequenza di byte [{0}] non è supportata dalla pagina codici selezionata"
+"Послідовність байтів [{0}] не підтримується вибраною кодовою сторінкою"
+"Паслядоўнасць байтаў [{0}] не падтрымліваецца выбранай кодавай старонкай"
+"Pasirinktas kodo puslapis nepalaiko baitų sekos [{0}]"
+"A sequência de bytes [{0}] não é suportada pela página de código selecionada"
 
 MKeyLaunchMediaSelect
 l:// keys
