@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-07-05 15:37:03+01:00 - build 6505
+
+1. gh-977: Improve error messages on encoding errors.
+
+--------------------------------------------------------------------------------
 MZK 2025-06-29 21:48:53-04:00 - build 6504
 
 1. New feature: Edit the content of Find All menu in a new Editor.
